fix!: rename flag path to filename - e.g. flags/1x1/ad.svg -> flags/1x1-ad.svg This should fix file overlaps in es-build environments

--- a/sass/_flag-icons-base.scss
+++ b/sass/_flag-icons-base.scss
@@ -20,11 +20,11 @@
 
 @mixin flag-icon($country) {
   .fi-#{$country} {
-    background-image: url(#{$flag-icons-path}#{$flag-icons-rect-path}/#{$country}.svg);
+    background-image: url(#{$flag-icons-path}/4x3-#{$country}.svg);
 
     @if $flag-icons-use-square {
       &.fis {
-        background-image: url(#{$flag-icons-path}#{$flag-icons-square-path}/#{$country}.svg);
+        background-image: url(#{$flag-icons-path}/1x1-#{$country}.svg);
       }
     }
   }
